--- a/education/src/main/resources/application.properties
+++ b/education/src/main/resources/application.properties
@@ -3,18 +3,30 @@ server.port=9001
 # --------------------------------------------------
 # DATASOURCE
 # -------------------------------------------------
-#MYSQL 0 Localhost
-spring.datasource.url=jdbc:mysql://localhost:3306/crm_api?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=nambao12
-#---------------------------------------------------
+##MYSQL 0 Localhost
+#spring.datasource.url=jdbc:mysql://localhost:3306/crm_api?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=nambao12
+
+spring.datasource.url=jdbc:postgresql://118.71.224.224:5423/crm_green
+spring.datasource.username=green
+spring.datasource.password=Green@2024
+spring.jpa.properties.hibernate.default_schema=public
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.connection-timeout=30000
+spring.liquibase.enabled=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
+
+##---------------------------------------------------
 # JPA
 # --------------------------------------------------
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 #---------
 # Page @ Sorting
 #------
