--- a/education/src/main/resources/application.properties
+++ b/education/src/main/resources/application.properties
@@ -14,11 +14,12 @@ spring.datasource.password=Green@2024
 spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.hikari.maximum-pool-size=2
 spring.datasource.hikari.connection-timeout=30000
-spring.liquibase.enabled=false
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
+spring.liquibase.change-log=classpath:db/changelog/changelog.sql
+spring.liquibase.enabled=false
 ##---------------------------------------------------
 # JPA
 # --------------------------------------------------
