--- a/education/src/main/resources/application.properties
+++ b/education/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=9001
 # DATASOURCE
 # -------------------------------------------------
 ##MYSQL 0 Localhost
-#spring.datasource.url=jdbc:mysql://localhost:3306/crm_api?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/apicrm
 #spring.datasource.username=root
-#spring.datasource.password=nambao12
+#spring.datasource.password=khaimtb99
 
 spring.datasource.url=jdbc:postgresql://118.71.224.224:5423/crm_green
 spring.datasource.username=green
