--- a/education/src/main/resources/application.properties
+++ b/education/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.port=9001
 # --------------------------------------------------
 # DATASOURCE
 # -------------------------------------------------
+#spring.datasource.url=jdbc:mysql://localhost:3306/apicrm
+#spring.datasource.username=root
+#spring.datasource.password=khaimtb99
+
 spring.datasource.url=jdbc:postgresql://118.71.224.224:5423/crm_green
 spring.datasource.username=green
 spring.datasource.password=Green@2024
