--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "formik": "^2.4.6",
